After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 640850 - GstElement: Fix warning with GCC 4.6
GstElement: Fix warning with GCC 4.6
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other All
: Normal normal
: 0.10.33
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-01-28 19:10 UTC by Bastien Nocera
Modified: 2011-01-28 20:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GstElement: Fix warning with GCC 4.6 (1.09 KB, patch)
2011-01-28 19:10 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2011-01-28 19:10:40 UTC
As per patch (I love -Werror...)
Comment 1 Bastien Nocera 2011-01-28 19:10:42 UTC
Created attachment 179541 [details] [review]
GstElement: Fix warning with GCC 4.6

gstelement.c: In function ‘gst_element_get_request_pad’:
gstelement.c:1052:18: error: variable ‘tmp’ set but not used [-Werror=unused-but-set-variable]
Comment 2 Tim-Philipp Müller 2011-01-28 20:01:17 UTC
Thanks, changed LONG_{MIN,MAX} to G_{MIN,MAX}LONG to avoid portability issues.

 commit e6de18ea99d14336b01c4afc44a2ac47a35447c1
 Author: Bastien Nocera <hadess@hadess.net>
 Date:   Fri Jan 28 19:08:08 2011 +0000

    GstElement: Fix warning with GCC 4.6
    
    gstelement.c: In function ‘gst_element_get_request_pad’:
    gstelement.c:1052:18: error: variable ‘tmp’ set but not used [-Werror=unused-but-set-variable]
    
    https://bugzilla.gnome.org/show_bug.cgi?id=640850


> (I love -Werror...)

make ERROR_CFLAGS=''